--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,18 +10,21 @@ services:
     depends_on:
       - dynatrace-oneagent
     volumes:
-      - /opt/dynatrace/oneagent:/opt/dynatrace/oneagent:ro
+      - ./dynatrace/oneagent:/opt/dynatrace/oneagent:ro
 
   dynatrace-oneagent:
     image: "dynatrace/oneagent"
     container_name: dynatrace-oneagent
     environment:
-      - ONEAGENT_INSTALLER_SCRIPT_URL=ValueOfTheInstallerScript
+      - ONEAGENT_INSTALLER_SCRIPT_URL=ScriptUrlValue
       - ONEAGENT_INSTALLER_SCRIPT_ARGS=--set-host-group=production
-      - ONEAGENT_INSTALLER_DOWNLOAD_TOKEN=ValueOfTheToken
+      - ONEAGENT_INSTALLER_DOWNLOAD_TOKEN=ToeknValue
     privileged: true
     pid: "host"
     network_mode: "host"
     volumes:
       - /:/mnt/root:ro
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./dynatrace/log:/var/log/dynatrace
+      - ./dynatrace/lib/oneagent:/var/lib/dynatrace/oneagent
+      - ./dynatrace/lib/enrichment:/var/lib/dynatrace/enrichment
